--- a/browse-courses.html
+++ b/browse-courses.html
@@ -6,6 +6,7 @@
     <title>Browse Courses - Online Learning Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <!-- Header will be injected by common-elements.js -->
@@ -25,6 +26,14 @@
         </div>
         <div id="browse-options" class="mb-8 hidden">
             <!-- This will be populated by JavaScript based on the selected browsing method -->
+        </div>
+        <div class="mb-4">
+            <button id="toggle-delete-btn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+                Delete Courses
+            </button>
+        </div>
+        <div id="course-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- This div will be populated by JavaScript with course listings -->
         </div>
         <div id="course-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- This div will be populated by JavaScript with course listings -->
