--- a/faqs.html
+++ b/faqs.html
@@ -6,6 +6,7 @@
     <title>FAQs - Online Learning Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <!-- Header will be injected by common-elements.js -->
