--- a/instructor-profile.html
+++ b/instructor-profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructor Profile - Online Learning Platform</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body>
     <header id="instructor-header">
