--- a/monthly-subscription.html
+++ b/monthly-subscription.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://js.stripe.com/v3/"></script>
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <!-- Header will be injected by common-elements.js -->
