--- a/instructor-profile.html
+++ b/instructor-profile.html
@@ -6,6 +6,7 @@
     <title>Instructor Profile - Online Learning Platform</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header id="instructor-header">
