--- a/annual-subscription.html
+++ b/annual-subscription.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
     <!-- Header will be injected by common-elements.js -->
