--- a/course-order.html
+++ b/course-order.html
@@ -36,8 +36,8 @@
                 <!-- Stripe Elements will be inserted here -->
             </div>
 
-            <div id="paypal-button-container" class="hidden mb-4">
-                <!-- PayPal button will be inserted here -->
+            <div id="paypal-logo-container" class="hidden mt-4">
+                <img src="Paypal.png" alt="PayPal" class="h-12">
             </div>
 
             <h2 class="text-xl font-semibold text-gray-700 mb-4 mt-8">Access Options</h2>
