--- a/monthly-subscription.html
+++ b/monthly-subscription.html
@@ -38,8 +38,8 @@
                 <!-- Stripe Elements will be inserted here -->
             </div>
 
-            <div id="paypal-button-container" class="hidden mb-4">
-                <!-- PayPal button will be inserted here -->
+            <div id="paypal-logo-container" class="hidden mt-4">
+                <img src="Paypal.png" alt="PayPal" class="h-12">
             </div>
 
             <div class="flex items-center justify-between">
