--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <title>About Us - Online Learning Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
@@ -14,15 +13,36 @@
 
     <main class="container mx-auto px-4 py-8">
         <h1 class="text-3xl font-bold text-gray-800 mb-8">About Us</h1>
+        <p>We are a team of IT students passionate about teaching others to study more about coding and technologies</p>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- Add team member information here -->
             <div class="bg-white p-6 shadow-md rounded-lg text-center">
                 <img src="path/to/member1.jpg" alt="Team Member 1" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-                <h2 class="text-xl font-semibold text-gray-800">Member Name</h2>
-                <p class="mt-2 text-gray-600">Brief description</p>
+                <h2 class="text-xl font-semibold text-gray-800">Tung Do</h2>
+                <p class="mt-2 text-gray-600"> Full-stack software engineer </p>
                 <button class="mt-4 bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700 transition duration-300 view-member">View Details</button>
             </div>
             <!-- Repeat for other team members -->
+            
+            <!-- Add team member information here -->
+            <div class="bg-white p-6 shadow-md rounded-lg text-center">
+                <img src="path/to/member1.jpg" alt="Team Member 2" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
+                <h2 class="text-xl font-semibold text-gray-800">Bao Ho</h2>
+                <p class="mt-2 text-gray-600"> Back-end engineer </p>
+                <button
+                    class="mt-4 bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700 transition duration-300 view-member">View
+                    Details</button>
+            </div>
+
+            <!-- Add team member information here -->
+            <div class="bg-white p-6 shadow-md rounded-lg text-center">
+                <img src="path/to/member1.jpg" alt="Team Member 3" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
+                <h2 class="text-xl font-semibold text-gray-800">Ngan Le</h2>
+                <p class="mt-2 text-gray-600"> Front-end engineer </p>
+                <button
+                    class="mt-4 bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700 transition duration-300 view-member">View
+                    Details</button>
+            </div>
         </div>
     </main>
 
